# Simple-WoL

./: .gitignore  CHANGELOG.md  ICON_README.md  README.md  build.bat  build.sh  dev.py  devices_example.json  install.bat  install.sh  pyproject.toml  requirements-build.txt  requirements.txt  run.bat  run.sh  run_modular.bat  run_modular.py  run_modular.sh  run_tests.py  setup.py  simple_wol.py  test_dependencies.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml  security.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci-cd.yml  code-scanning.yml  release.yml  security-monitoring.yml
assets/: README.md
docs/: DEVELOPMENT.md
src/simple_wol/: __init__.py  __main__.py  app.py  device.py
src/simple_wol/config/: __init__.py  manager.py
src/simple_wol/network/: __init__.py  wol.py
src/simple_wol/ui/: __init__.py  device_dialog.py  main_window.py  tooltip.py
tests/: test_basic.py
