[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-wol"
dynamic = ["version"]
description = "A simple cross-platform Wake-on-LAN application with GUI"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Simple-WoL Team"},
]
keywords = ["wake-on-lan", "wol", "network", "gui", "tkinter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop", 
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8", 
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking",
    "Topic :: Utilities",
]
dependencies = [
    "wakeonlan>=3.1.0",
]

[project.optional-dependencies]
build = [
    "pyinstaller>=5.0",
    "pillow>=8.0.0",
]
dev = [
    "pytest>=6.0",
    "black",
    "flake8",
]

[project.scripts]
simple-wol = "simple_wol.app:main"

[project.gui-scripts]
simple-wol-gui = "simple_wol.app:main"

[project.urls]
Homepage = "https://github.com/ColDog5044/Simple-WoL"
Repository = "https://github.com/ColDog5044/Simple-WoL"
Issues = "https://github.com/ColDog5044/Simple-WoL/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "simple_wol.__version__"}

[tool.setuptools.package-data]
simple_wol = ["assets/*"]

[tool.black]
line-length = 100
target-version = ['py37']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
